@@ -2011,12 +2011,15 @@ typedef struct job_sbcast_cred_msg {
 /* Opaque data type for slurm_step_ctx_* functions */
 typedef struct slurm_step_ctx_struct slurm_step_ctx_t;
 
+#define TRIGGER_FLAG_PERM		0x0001
+
 #define TRIGGER_RES_TYPE_JOB            0x0001
 #define TRIGGER_RES_TYPE_NODE           0x0002
 #define TRIGGER_RES_TYPE_SLURMCTLD      0x0003
 #define TRIGGER_RES_TYPE_SLURMDBD       0x0004
 #define TRIGGER_RES_TYPE_DATABASE       0x0005
 #define TRIGGER_RES_TYPE_FRONT_END      0x0006
+
 #define TRIGGER_TYPE_UP                 0x00000001
 #define TRIGGER_TYPE_DOWN               0x00000002
 #define TRIGGER_TYPE_FAIL               0x00000004
@@ -2040,6 +2043,7 @@ typedef struct slurm_step_ctx_struct slurm_step_ctx_t;
 
 
 typedef struct trigger_info {
+	uint16_t flags;		/* TRIGGER_FLAG_* */
 	uint32_t trig_id;	/* trigger ID */
 	uint16_t res_type;	/* TRIGGER_RES_TYPE_* */
 	char *   res_id;	/* resource ID */
