@@ -68,7 +68,8 @@
 #define MAX_PROG_TIME 300	/* maximum run time for program */
 
 /* Change TRIGGER_STATE_VERSION value when changing the state save format */
-#define TRIGGER_STATE_VERSION      "VER003"
+#define TRIGGER_STATE_VERSION      "VER004"
+#define TRIGGER_2_4_STATE_VERSION  "VER004"	/* SLURM version 2.4 */
 #define TRIGGER_2_2_STATE_VERSION  "VER003"	/* SLURM version 2.2 */
 #define TRIGGER_2_1_STATE_VERSION  "VER002"	/* SLURM version 2.1 */
 
@@ -102,6 +103,8 @@ uint8_t db_failure = 0;
 uint8_t dbd_failure = 0;
 
 typedef struct trig_mgr_info {
+	uint32_t child_pid;	/* pid of child process */
+	uint16_t flags;		/* TRIGGER_FLAG_* */
 	uint32_t trig_id;	/* trigger ID */
 	uint16_t res_type;	/* TRIGGER_RES_TYPE_* */
 	char *   res_id;	/* node name or job_id (string) */
@@ -111,7 +114,7 @@ typedef struct trig_mgr_info {
 	uint32_t trig_type;	/* TRIGGER_TYPE_* */
 	time_t   trig_time;	/* offset (pending) or time stamp (complete) */
 	uint32_t user_id;	/* user requesting trigger */
-	uint32_t group_id;	/* user's group id (pending) or pid (complete) */
+	uint32_t group_id;	/* user's group id */
 	char *   program;	/* program to execute */
 	uint8_t  state;		/* 0=pending, 1=pulled, 2=completed */
 } trig_mgr_info_t;
@@ -335,8 +338,10 @@ extern trigger_info_msg_t * trigger_get(uid_t uid, trigger_info_msg_t *msg)
 	trig_out = resp_data->trigger_array;
 	while ((trig_in = list_next(trig_iter))) {
 		/* Note: Filtering currently done by strigger */
-		if (trig_in->state >= 1)
+		if ((trig_in->state >= 1) &&
+		    ((trig_out->flags & TRIGGER_FLAG_PERM) == 0))
 			continue;	/* no longer pending */
+		trig_out->flags     = trig_in->flags;
 		trig_out->trig_id   = trig_in->trig_id;
 		trig_out->res_type  = trig_in->res_type;
 		trig_out->res_id    = xstrdup(trig_in->res_id);
@@ -420,6 +425,7 @@ extern int trigger_set(uid_t uid, gid_t gid, trigger_info_msg_t *msg)
 		msg->trigger_array[i].trig_id = next_trigger_id;
 		trig_add->trig_id = next_trigger_id;
 		next_trigger_id++;
+		trig_add->flags = msg->trigger_array[i].flags;
 		trig_add->res_type = msg->trigger_array[i].res_type;
 		trig_add->nodes_bitmap = bitmap;
 		trig_add->job_id = job_id;
@@ -631,6 +637,7 @@ static void _dump_trigger_state(trig_mgr_info_t *trig_ptr, Buf buffer)
 	safe_pack8(dbd_failure,     buffer);
 	safe_pack8(db_failure,      buffer);
 
+	pack16   (trig_ptr->flags,     buffer);
 	pack32   (trig_ptr->trig_id,   buffer);
 	pack16   (trig_ptr->res_type,  buffer);
 	packstr  (trig_ptr->res_id,    buffer);
@@ -651,7 +658,28 @@ static int _load_trigger_state(Buf buffer, uint16_t protocol_version)
 	uint32_t str_len;
 
 	trig_ptr = xmalloc(sizeof(trig_mgr_info_t));
-	if (protocol_version >= SLURM_2_2_PROTOCOL_VERSION) {
+
+	if (protocol_version >= SLURM_2_4_PROTOCOL_VERSION) {
+		/* restore trigger pull state flags */
+		safe_unpack8(&ctld_failure, buffer);
+		safe_unpack8(&bu_ctld_failure, buffer);
+		safe_unpack8(&dbd_failure, buffer);
+		safe_unpack8(&db_failure, buffer);
+
+		safe_unpack16   (&trig_ptr->flags,     buffer);
+		safe_unpack32   (&trig_ptr->trig_id,   buffer);
+		safe_unpack16   (&trig_ptr->res_type,  buffer);
+		safe_unpackstr_xmalloc(&trig_ptr->res_id, &str_len, buffer);
+		/* rebuild nodes_bitmap as needed from res_id */
+		/* rebuild job_id as needed from res_id */
+		/* rebuild job_ptr as needed from res_id */
+		safe_unpack32   (&trig_ptr->trig_type, buffer);
+		safe_unpack_time(&trig_ptr->trig_time, buffer);
+		safe_unpack32   (&trig_ptr->user_id,   buffer);
+		safe_unpack32   (&trig_ptr->group_id,  buffer);
+		safe_unpackstr_xmalloc(&trig_ptr->program, &str_len, buffer);
+		safe_unpack8    (&trig_ptr->state,     buffer);
+	} else if (protocol_version >= SLURM_2_2_PROTOCOL_VERSION) {
 		/* restore trigger pull state flags */
 		safe_unpack8(&ctld_failure, buffer);
 		safe_unpack8(&bu_ctld_failure, buffer);
@@ -890,6 +918,8 @@ extern int trigger_state_restore(void)
 	if (ver_str) {
 		if (!strcmp(ver_str, TRIGGER_STATE_VERSION)) {
 			protocol_version = SLURM_PROTOCOL_VERSION;
+		} else if (!strcmp(ver_str, TRIGGER_2_2_STATE_VERSION)) {
+			protocol_version = SLURM_2_2_PROTOCOL_VERSION;
 		} else if (!strcmp(ver_str, TRIGGER_2_1_STATE_VERSION)) {
 			protocol_version = SLURM_2_1_PROTOCOL_VERSION;
 		}
@@ -1421,7 +1451,7 @@ static void _trigger_run_program(trig_mgr_info_t *trig_in)
 	char *pname, *uname;
 	uid_t uid;
 	gid_t gid;
-	pid_t child;
+	pid_t child_pid;
 
 	if (!_validate_trigger(trig_in))
 		return;
@@ -1439,10 +1469,10 @@ static void _trigger_run_program(trig_mgr_info_t *trig_in)
 	snprintf(user_name, sizeof(user_name), "%s", uname);
 	xfree(uname);
 
-	child = fork();
-	if (child > 0) {
-		trig_in->group_id = child;
-	} else if (child == 0) {
+	child_pid = fork();
+	if (child_pid > 0) {
+		trig_in->child_pid = child_pid;
+	} else if (child_pid == 0) {
 		int i;
 		bool run_as_self = (uid == getuid());
 
@@ -1509,6 +1539,34 @@ static void _clear_event_triggers(void)
 	trigger_pri_db_res_op = false;
 }
 
+/* Make a copy of a trigger and pre-pend it on our list */
+static void _trigger_clone(trig_mgr_info_t *trig_in, time_t orig_time,
+			   char **orig_res_id, bitstr_t **orig_bitmap)
+{
+	trig_mgr_info_t *trig_add;
+
+	trig_add = xmalloc(sizeof(trig_mgr_info_t));
+	trig_add->flags     = trig_in->flags;
+	trig_add->trig_id   = trig_in->trig_id;
+	trig_add->res_type  = trig_in->res_type;
+	if (*orig_res_id) {
+		trig_add->res_id = *orig_res_id;
+		*orig_res_id = NULL;	/* Nothing left to free */
+	}
+	if (*orig_bitmap) {
+		trig_add->nodes_bitmap = *orig_bitmap;
+		*orig_bitmap = NULL;	/* Nothing left to free */
+	}
+	trig_add->job_id    = trig_in->job_id;
+	trig_add->job_ptr   = trig_in->job_ptr;
+	trig_add->trig_type = trig_in->trig_type;
+	trig_add->trig_time = orig_time;
+	trig_add->user_id   = trig_in->user_id;
+	trig_add->group_id  = trig_in->group_id;
+	trig_add->program   = xstrdup(trig_in->program);;
+	list_prepend(trigger_list, trig_add);
+}
+
 extern void trigger_process(void)
 {
 	ListIterator trig_iter;
@@ -1524,7 +1582,16 @@ extern void trigger_process(void)
 
 	trig_iter = list_iterator_create(trigger_list);
 	while ((trig_in = list_next(trig_iter))) {
+		time_t orig_time;
+		char  *orig_res_id = NULL;
+		bitstr_t *orig_bitmap = NULL;
 		if (trig_in->state == 0) {
+			if (trig_in->res_id)
+				orig_res_id = xstrdup(trig_in->res_id);
+			if (trig_in->nodes_bitmap)
+				orig_bitmap = bit_copy(trig_in->nodes_bitmap);
+			orig_time = trig_in->trig_time;
+
 			if (trig_in->res_type == TRIGGER_RES_TYPE_JOB)
 				_trigger_job_event(trig_in, now);
 			else if (trig_in->res_type == TRIGGER_RES_TYPE_NODE)
@@ -1551,6 +1618,10 @@ extern void trigger_process(void)
 				     trig_in->user_id, trig_in->group_id,
 				     trig_in->program, trig_in->res_id);
 			}
+			if (trig_in->flags & TRIGGER_FLAG_PERM) {
+				_trigger_clone(trig_in, orig_time,
+					       &orig_res_id, &orig_bitmap);
+			}
 			trig_in->state = 2;
 			trig_in->trig_time = now;
 			state_change = true;
@@ -1558,9 +1629,9 @@ extern void trigger_process(void)
 		} else if ((trig_in->state == 2) &&
 			   (difftime(now, trig_in->trig_time) >
 			    MAX_PROG_TIME)) {
-			if (trig_in->group_id != 0) {
-				killpg(trig_in->group_id, SIGKILL);
-				rc = waitpid(trig_in->group_id, &prog_stat,
+			if (trig_in->child_pid != 0) {
+				killpg(trig_in->child_pid, SIGKILL);
+				rc = waitpid(trig_in->child_pid, &prog_stat,
 					     WNOHANG);
 				if ((rc > 0) && prog_stat) {
 					info("trigger uid=%u type=%s:%s "
@@ -1571,12 +1642,12 @@ extern void trigger_process(void)
 					     WIFEXITED(prog_stat),
 					     WTERMSIG(prog_stat));
 				}
-				if ((rc == trig_in->group_id) ||
+				if ((rc == trig_in->child_pid) ||
 				    ((rc == -1) && (errno == ECHILD)))
-					trig_in->group_id = 0;
+					trig_in->child_pid = 0;
 			}
 
-			if (trig_in->group_id == 0) {
+			if (trig_in->child_pid == 0) {
 				if (slurm_get_debug_flags() &
 				    DEBUG_FLAG_TRIGGERS) {
 					info("purging trigger[%u]",
@@ -1588,7 +1659,7 @@ extern void trigger_process(void)
 		} else if (trig_in->state == 2) {
 			/* Elimiate zombie processes right away.
 			 * Purge trigger entry above MAX_PROG_TIME later */
-			rc = waitpid(trig_in->group_id, &prog_stat, WNOHANG);
+			rc = waitpid(trig_in->child_pid, &prog_stat, WNOHANG);
 			if ((rc > 0) && prog_stat) {
 				info("trigger uid=%u type=%s:%s exit=%u:%u",
 				     trig_in->user_id,
@@ -1597,10 +1668,12 @@ extern void trigger_process(void)
 				     WIFEXITED(prog_stat),
 				     WTERMSIG(prog_stat));
 			}
-			if ((rc == trig_in->group_id) ||
+			if ((rc == trig_in->child_pid) ||
 			    ((rc == -1) && (errno == ECHILD)))
-				trig_in->group_id = 0;
+				trig_in->child_pid = 0;
 		}
+		xfree(orig_res_id);
+		FREE_NULL_BITMAP(orig_bitmap);
 	}
 	list_iterator_destroy(trig_iter);
 	_clear_event_triggers();
